<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCalculatedInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="24dp"
        android:text="@string/calculatedInterset"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/etCalculatedInterest"
        app:layout_constraintStart_toStartOf="@+id/etCalculatedInterest" />

    <TextView
        android:id="@+id/tvInterestCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="147dp"
        android:layout_marginRight="147dp"
        android:layout_marginBottom="56dp"
        android:capitalize="none"
        android:text="@string/screenName"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/etAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvAmount"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginBottom="60dp"
        android:text="@string/amount"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvNoOfYears"
        app:layout_constraintEnd_toStartOf="@+id/etAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:inputType="number"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/etNoOfYears"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toEndOf="@+id/tvAmount"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvNoOfYears"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:layout_marginBottom="47dp"
        android:text="@string/noOfYears"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvRateOfInterest"
        app:layout_constraintEnd_toStartOf="@+id/etNoOfYears"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etNoOfYears"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:inputType="number"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/etRateOfInt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etRateOfInt"
        app:layout_constraintTop_toBottomOf="@+id/etAmount" />

    <EditText
        android:id="@+id/etRateOfInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="136dp"
        android:ems="10"
        android:inputType="number"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/btnCompInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etAmount"
        app:layout_constraintTop_toBottomOf="@+id/etNoOfYears" />

    <TextView
        android:id="@+id/tvRateOfInterest"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="296dp"
        android:layout_marginRight="296dp"
        android:layout_marginBottom="155dp"
        android:text="@string/rateOfInterest"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnCompInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoOfYears" />

    <Button
        android:id="@+id/btnSimpleInterest"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="48dp"
        android:text="@string/calcSimpleInt"
        app:layout_constraintBottom_toTopOf="@+id/tvCalculatedInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvCalculatedInterest" />

    <Button
        android:id="@+id/btnCompInterest"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/calcCompInt"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnSimpleInterest"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etCalculatedInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginBottom="60dp"
        android:clickable="false"
        android:ems="10"
        android:inputType="none"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>